--- a/src/app/profile-editor/profile-editor.component.html
+++ b/src/app/profile-editor/profile-editor.component.html
@@ -1,73 +1,69 @@
-<form [formGroup]="profileForm">
-  <div>Form status: {{profileForm?.status}}</div>
-  <label>
-    First Name:
-    <input type="text" formControlName="firstName" />
-    <div class="alert alert-danger" [hidden]="profileForm?.controls?.firstName?.valid || profileForm?.controls?.firstName?.pristine">
-      First Name is required
+<form [formGroup]="profileForm" style="margin-top: 16px">
+
+  <h3>Profile</h3>
+
+  <div class="row">
+    <div class="col">
+      <input class="form-control" type="text" formControlName="firstName" placeholder="First name" />
+      <small [hidden]="profileForm?.controls?.firstName?.valid || profileForm?.controls?.firstName?.pristine" id="firstNameHelper"
+        class="form-text text-danger">First name is required</small>
     </div>
-  </label>
-
-  <label>
-    Last Name:
-    <input type="text" formControlName="lastName" />
-  </label>
-
-  <div formGroupName="address">
-    <label>
-      Street:
-      <input type="text" formControlName="street" />
-    </label>
-
-    <label>
-      City:
-      <input type="text" formControlName="city" />
-    </label>
-
-    <label>
-      State:
-      <input type="text" formControlName="state" />
-    </label>
-
-    <label>
-      Zip:
-      <input type="text" formControlName="zip" />
-    </label>
+    <div class="col">
+      <input class="form-control" type="text" formControlName="lastName" placeholder="Last name" />
+      <small [hidden]="profileForm?.controls?.lastName?.valid || profileForm?.controls?.lastName?.pristine" id="lastNameHelper"
+        class="form-text text-danger">Last name is required</small>
+    </div>
   </div>
 
-  <div formArrayName="aliases">
-    <h3>Aliases</h3> <button (click)="addAliases()">Add Aliases</button>
+  <div class="row" formGroupName="address" style="margin-top: 16px">
+    <div class="col">
+      <input class="form-control" type="text" formControlName="street" placeholder="Street" />
+    </div>
+    <div class="col">
+      <input class="form-control" type="text" formControlName="city" placeholder="City" />
+    </div>
+    <div class="col">
+      <input class="form-control" type="text" formControlName="state" placeholder="State" />
+    </div>
+    <div class="col">
+      <input class="form-control" type="text" formControlName="zip" placeholder="Zip" />
+    </div>
+  </div>
 
-    <div *ngFor="let address of aliases?.controls; let i = index" [formGroupName]="i">
+  <div formArrayName="aliases" style="margin-top: 16px">
+    <h3>Aliases</h3>
+    <button (click)="addAliases()" type="button" class="btn btn-primary btn-sm">Create a new Aliase</button>
 
-      <div>
-        <label>
-          Name:
-          <input type="text" formControlName="name" />
-          <div class="alert alert-danger" [hidden]="profileForm?.controls?.aliases?.controls[i]?.controls?.name?.valid || profileForm?.controls?.aliases?.controls[i]?.controls?.name?.pristine">
-            First Name is required
-          </div>
-        </label>
-
-        <label>
-          Age:
-          <input type="text" formControlName="age" />
-          <div class="alert alert-danger" [hidden]="profileForm?.controls?.aliases?.controls[i]?.controls?.age?.valid || profileForm?.controls?.aliases?.controls[i]?.controls?.age?.pristine">
-            Age is required
-          </div>
-        </label>
-
-        <label>
-          Gender:
-          <input type="text" formControlName="gender" />
-        </label>
-
-        <input type="button" value="Delete" (click)="removeAliases(i)">
+    <div class="row" *ngFor="let address of aliases?.controls; let i = index" [formGroupName]="i" style="margin-top: 16px">
+      <div class="col-md-4">
+        <input class="form-control" type="text" formControlName="name" placeholder="Name" />
+        <small class="form-text text-danger" [hidden]="profileForm?.controls?.aliases?.controls[i]?.controls?.name?.valid || profileForm?.controls?.aliases?.controls[i]?.controls?.name?.pristine">
+          First Name is required
+        </small>
+      </div>
+      <div class="col-md-4">
+        <input class="form-control" type="text" formControlName="age" placeholder="Age" />
+        <small class="form-text text-danger" [hidden]="profileForm?.controls?.aliases?.controls[i]?.controls?.age?.valid || profileForm?.controls?.aliases?.controls[i]?.controls?.age?.pristine">
+          Age is required
+        </small>
+      </div>
+      <div class="col-md-3">
+        <input class="form-control" type="text" formControlName="gender" placeholder="Gender" />
+      </div>
+      <div class="col-md-1" style="display: flex; justify-content: flex-end">
+        <input class="btn btn-danger btn-sm" type="button" value="Delete" (click)="removeAliases(i)">
       </div>
     </div>
   </div>
 
-  <button type="submit" (click)="onSubmit()" [disabled]="!profileForm?.valid">Submit</button>
-  <button (click)="updateProfile()">Update Profile</button>
-  <button type="button" (click)="profileForm.reset()">Reset</button>
+  <div style="margin-top: 16px">
+    <app-multiselect-dropdown name="multiCity" [placeholder]="'Select City'" [data]="cities" formControlName="multiCity" [disabled]="disabled"
+      [settings]="dropdownSettings"></app-multiselect-dropdown>
+  </div>
+
+  <div style="margin-top: 16px" class="text-right">
+    <button style="margin-right: 8px" class="btn btn-primary btn-sm" type="submit" (click)="onSubmit()" [disabled]="!profileForm?.valid">Submit</button>
+    <button class="btn btn-danger btn-sm" type="button" (click)="profileForm.reset()">Reset</button>
+  </div>
+
 </form>
