delete multi select disabled

--- a/src/app/profile-editor/profile-editor.component.html
+++ b/src/app/profile-editor/profile-editor.component.html
@@ -58,8 +58,7 @@
 
   <div style="margin-top: 16px">
     <label>Multi Select</label>
-    <app-multiselect-dropdown name="multiCity" [placeholder]="'Select City'" [data]="cities" formControlName="multiCity" [disabled]="disabled"
-      [settings]="dropdownSettings"></app-multiselect-dropdown>
+    <app-multiselect-dropdown name="multiCity" [placeholder]="'Select City'" [data]="cities" formControlName="multiCity" [settings]="dropdownSettings"></app-multiselect-dropdown>
   </div>
 
   <div style="margin-top: 16px">
